# ask4diversity

./: README.md  pyproject.toml
run/: all_arithmetic_div.sh  all_div.sh  all_gen.sh  iteration.sh  parallel.sh  run_slurm.py  sequential.sh
src/: run_arithmetic_diversity.py  run_diversity.py  run_generation.py
src/configs/: defaults.yaml  run.yaml
src/configs/model/: cache_model.py  deepseek-8b.yaml  qwen3-1.7b.yaml  qwen3-14b.yaml  qwen3-4b-instruct.yaml  qwen3-4b-thinking.yaml  qwen3-4b.yaml  qwen3-8b.yaml
src/configs/task/: zeroshot_gsm8k_iteration.yaml  zeroshot_gsm8k_parallel.yaml  zeroshot_gsm8k_sequential.yaml
src/core/: __init__.py  dataset_loader.py  diversity_utils.py  evaluator.py  fewshot.py  lmeval_filters.py  lmeval_stopping.py  metrics.py  model_wrapper.py  sequential_evaluator.py  task_processor.py  transformers_wrapper.py  vllm_wrapper.py  yaml_parser.py
src/tasks/gsm8k/zeroshot/: gdg-gsm8k-iteration.yaml  gdg-gsm8k-parallel.yaml  gdg-gsm8k-sequential.yaml
src/utils/: parse_utils.py  subprocess_utils.py
